// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create Get-User-By-Id Controller Snapshot Test for email not verified. 1`] = `
{
  "body": {
    "message": "Email not verified.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for empty user-id. 1`] = `
{
  "body": {
    "message": "Oops! user ID is not found.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for invalid user-id. 1`] = `
{
  "body": {
    "message": "Invalid userID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for user blocked. 1`] = `
{
  "body": {
    "message": "Your account is blocked. Please contact support.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for user found successfully. 1`] = `
{
  "body": {
    "data": {
      "_id": "mocked-id",
      "active": true,
      "email": "test@gmail.com",
      "emailVerified": true,
      "fullname": "UserTest",
      "totalArticles": 0,
      "username": "test",
    },
    "message": "User retrieved successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for user not exist. 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test internal server error. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;
